0.83.1
  - Long filename support added, adapted from
    the vDosPlus project (Wengier)
  - Corrected return value when using option to
    fake the installation of SHARE. (Allofich)
  - Added code to EMS emulation to print specific
    debug information when a PC-98 specific call is
    made to remap segment B000h to either system
    memory or video memory. I do not have enough
    test cases or a setup to test what really happens,
    so it will remain a debug message for now.
  - Added dosbox.conf option to allow emulation of a
    DOS environment that lacks ANSI.SYS. NOTE: The
    option has no effect in PC-98 mode.
  - INT 2Fh now responds to AX=1A00h which is an installation
    check to report whether ANSI.SYS is resident.
  - Added INT 21h debug logging for file I/O and general
    INT 21h usage [patch by ognjenmi]. Added enables for
    the logging which are off by default since the INT 21h
    and file I/O logging are fairly noisy under normal
    usage.

0.83.0
  - Added mt32.romdir dosbox.conf configuration option
    for users who store the MT32 ROMs elsewhere other
    than the current working directory.
  - Configuration GUI settings menu is now vertically
    divided to ensure that it fits on the screen even
    if the window is at minimum size.
  - PC-98 GDC status fixed to follow the explicit
    definition of one bit as hblank and the other
    as vsync instead of carrying over VGA port 3DAh
    style logic of hblank/vblank vs vsync. This
    fixes the BPS logo scanline effects in PC-98
    game 'frontier-universe-bps-neo-kobe-pc98-ia'
  - Added dosbox.conf option to select between two
    known behaviors in PC-98 mode regarding the PC
    speaker and the PIT timer. The default behavior
    follows the newer hardware, the alternate setting
    is for older games written against the PC-9801
    behavior.
  - Added dosbox.conf option nocachedir which, when
    set, instructs MOUNT to automatically act as if
    -nocachedir were given.